<resources>
    <string name="app_name">Petroleum Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    //AGREGAR NUEVOS ITEMS DE CALCULO
    <string name="menu_gravedadespecifica">Gravedad Especifica</string> //AQUI SE MODIFICA EL NOMBRE EN EL MENU
    <string name="menu_gravedadapi">Gravedad API</string>
    <string name="menu_numerodereynolds">Numero de Reynolds</string>
</resources>