<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        // PARAR AGREGAR ITEMS NUEVOS, LUEGO AGREGAR VECTOR ASSET EN DRAWABLE//
        <item
            android:id="@+id/nav_gravedadespecifica"
            android:icon="@drawable/ic_baseline_calculategravedadespecifica_24"
            android:title="@string/menu_gravedadespecifica" />
        <item
            android:id="@+id/nav_gravedadapi"
            android:icon="@drawable/ic_baseline_calculategravedadapi_24"
            android:title="@string/menu_gravedadapi" />
    </group>
</menu>