<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.petroleumcalculator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.petroleumcalculator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gravedadapi"
        android:name="com.example.petroleumcalculator.ui.gravedadapi.GravedadApiFragment"
        android:label="@string/menu_gravedadapi"
        tools:layout="@layout/fragment_gravedad_api" />
    <fragment
        android:id="@+id/nav_gravedadespecifica"
        android:name="com.example.petroleumcalculator.ui.gravedadespecifica.GravedadEspecificaFragment"
        android:label="@string/menu_gravedadespecifica"
        tools:layout="@layout/fragment_gravedad_especifica" />
    <fragment
        android:id="@+id/nav_numerodereynolds"
        android:name="com.example.petroleumcalculator.ui.numerodereynolds.NumeroDeReynoldsFragment"
        android:label="@string/menu_numerodereynolds"
        tools:layout="@layout/fragment_numero_de_reynolds" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.petroleumcalculator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>